--- a/index.html.html
+++ b/index.html.html
@@ -680,7 +680,7 @@
             </div>
         </div>
         <h1 class="splash-title">SOIF</h1>
-        <p class="splash-subtitle">Trouve ton bar idéal à Montpellier et au delà...</p>
+        <p class="splash-subtitle">Trouve ton bar idéal dans ta ville et au delà...</p>
         <div class="loading-dots">
             <div class="dot"></div>
             <div class="dot"></div>
